# chadinterpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  program.txt
examples/: ackermann.txt  factorial.txt  fizzbuzz.txt
src/: ast.c  ast.h  binary_ops.h  builtin_fns.h  builtins.c  builtins.h  cvector.h  debug.c  debug.h  errors.h  eval.c  gc.c  gc.h  getline_impl.h  getopt_impl.h  gui.c  hashmap.c  hashmap.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  mem.c  mem.h  parser.c  parser.h  repl.c  runtime_types.h  stb_extra.h  tokens.h  unary_ops.h  vc_vector.c  vc_vector.h
